third_party/move/move-model/tests/sources/expressions_err.exp
error: undeclared `x`
   ┌─ tests/sources/expressions_err.move:12:7
   │
12 │       x
   │       ^

error: no function named `not_declared` found
   ┌─ tests/sources/expressions_err.move:17:7
   │
17 │       not_declared()
   │       ^^^^^^^^^^^^^^

error: cannot return `bool` from a function with result type `num`
   ┌─ tests/sources/expressions_err.move:22:7
   │
22 │       false
   │       ^^^^^

error: cannot use `vector<num>` with an operator which expects a value of type `num`
   ┌─ tests/sources/expressions_err.move:27:7
   │
27 │       x > y
   │       ^

error: cannot return `bool` from a function with result type `(num, bool)`
   ┌─ tests/sources/expressions_err.move:32:7
   │
32 │       false
   │       ^^^^^

error: cannot pass `u256` to a function which expects argument of type `bool`
   ┌─ tests/sources/expressions_err.move:37:63
   │
37 │     fun wrongly_typed_caller(): num { wrongly_typed_callee(1, 1) }
   │                                                               ^

error: expected function type returns value of type `num` but `bool` was provided
   ┌─ tests/sources/expressions_err.move:41:76
   │
41 │     fun wrongly_typed_fun_arg_caller(): num { wrongly_typed_fun_arg_callee(|x| false) }
   │                                                                            ^^^^^^^^^

error: expected 2 type arguments but 1 were provided
   ┌─ tests/sources/expressions_err.move:46:7
   │
46 │       wrong_instantiation<u64>(x)
   │       ^^^^^^^^^^^^^^^^^^^^^^^^^^^
